# gRPC

./: Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  lint.yml
src/: kvstore_pb2_grpc.py  main.py  server.py  store.py
