[project]
name = "itkacademy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp==3.13.2",
    "alembic==1.17.2",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "apscheduler>=3.11.2",
    "asyncpg==0.30.0",
    "certifi==2025.11.12",
    "click==8.3.0",
    "fastapi==0.121.2",
    "fastapi-cache2>=0.2.2",
    "greenlet==3.2.4",
    "grpcio>=1.78.0",
    "grpcio-tools>=1.78.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "iniconfig==2.3.0",
    "mako==1.3.10",
    "markupsafe==3.0.3",
    "packaging==25.0",
    "pluggy==1.6.0",
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "pytest==9.0.1",
    "pytest-asyncio==1.3.0",
    "ruff>=0.15.0",
    "setuptools==80.9.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.44",
    "starlette==0.49.3",
    "structlog==25.5.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.38.0",
    "wheel==0.45.1",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
